--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ main{
     max-width: 600px;
     min-width: 400px;
     
-    margin:auto;
+    margin:0px auto;
     border-radius: 10px;
     box-shadow: 1px 2px 10px black;
     text-align:center;
